Fixes options list being visible (briefly) on load

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -138,6 +138,7 @@ combobox-framework [slot="list"] tr:hover td {
     background-color: var(--primary-color);
 }
 
-combobox-framework input[aria-expanded="false"] + [slot="list"] {
+combobox-framework input[aria-expanded="false"] + [slot="list"],
+combobox-framework input:not([aria-expanded]) + [slot="list"] {
     display: none;
 }
